added Readme and red slider